Section 0 - MapReduce starting with Spark/ start

--- a/BDA/Section 3 - Preparing Data using SparkSQL/3.2/hands-on-3.2.ipynb
+++ b/BDA/Section 3 - Preparing Data using SparkSQL/3.2/hands-on-3.2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,13 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = (\n",
     "    spark.read.csv(\n",
-    "        path=\"ratings.csv\",\n",
+    "        path=\"../../data-sets/MovieLens-Small/ml-latest-small/ratings.csv\",\n",
     "        sep=\",\",\n",
     "        header=True,\n",
     "        quote='\"',\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -43,11 +43,11 @@
       "+------+-------+------+--------------+-------------------+\n",
       "|userId|movieId|rating|timestamp_unix|          timestamp|\n",
       "+------+-------+------+--------------+-------------------+\n",
-      "|     1|      1|   4.0|     964982703|2000-07-30 18:45:03|\n",
-      "|     1|      3|   4.0|     964981247|2000-07-30 18:20:47|\n",
-      "|     1|      6|   4.0|     964982224|2000-07-30 18:37:04|\n",
-      "|     1|     47|   5.0|     964983815|2000-07-30 19:03:35|\n",
-      "|     1|     50|   5.0|     964982931|2000-07-30 18:48:51|\n",
+      "|     1|      1|   4.0|     964982703|2000-07-30 21:45:03|\n",
+      "|     1|      3|   4.0|     964981247|2000-07-30 21:20:47|\n",
+      "|     1|      6|   4.0|     964982224|2000-07-30 21:37:04|\n",
+      "|     1|     47|   5.0|     964983815|2000-07-30 22:03:35|\n",
+      "|     1|     50|   5.0|     964982931|2000-07-30 21:48:51|\n",
       "+------+-------+------+--------------+-------------------+\n",
       "only showing top 5 rows\n",
       "\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -78,11 +78,11 @@
       "+------+-------+------+-------------------+\n",
       "|userId|movieId|rating|          timestamp|\n",
       "+------+-------+------+-------------------+\n",
-      "|     1|      1|   4.0|2000-07-30 18:45:03|\n",
-      "|     1|      3|   4.0|2000-07-30 18:20:47|\n",
-      "|     1|      6|   4.0|2000-07-30 18:37:04|\n",
-      "|     1|     47|   5.0|2000-07-30 19:03:35|\n",
-      "|     1|     50|   5.0|2000-07-30 18:48:51|\n",
+      "|     1|      1|   4.0|2000-07-30 21:45:03|\n",
+      "|     1|      3|   4.0|2000-07-30 21:20:47|\n",
+      "|     1|      6|   4.0|2000-07-30 21:37:04|\n",
+      "|     1|     47|   5.0|2000-07-30 22:03:35|\n",
+      "|     1|     50|   5.0|2000-07-30 21:48:51|\n",
       "+------+-------+------+-------------------+\n",
       "only showing top 5 rows\n",
       "\n"
@@ -117,9 +117,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
