--- a/BDA/Section 3 - Preparing Data using SparkSQL/3.1/loading_data_from_a_csv_file.ipynb
+++ b/BDA/Section 3 - Preparing Data using SparkSQL/3.1/loading_data_from_a_csv_file.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "# Location of the ratings.csv  file\n",
     "# data-sets/MovieLens-Small/ml-latest-small/ratings.csv\n",
-    "RATINGS_CSV_LOCATION = \"../../data-sets/data-sets/MovieLens-Small/ml-latest-small/ratings.csv\""
+    "RATINGS_CSV_LOCATION = \"../../data-sets/MovieLens-Small/ml-latest-small/ratings.csv\""
    ]
   },
   {
@@ -68,23 +68,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AnalysisException",
-     "evalue": "Path does not exist: file:/S:/mesgit/CSC645/BDA/data-sets/data-sets/MovieLens-Small/ml-latest-small/ratings.csv;",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAnalysisException\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-c8af634ae09a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mspark\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcsv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mRATINGS_CSV_LOCATION\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mS:\\mesgit\\CSC645\\BDA\\sparkhome\\spark-3.0.1-bin-hadoop2.7\\python\\pyspark\\sql\\readwriter.py\u001b[0m in \u001b[0;36mcsv\u001b[1;34m(self, path, schema, sep, encoding, quote, escape, comment, header, inferSchema, ignoreLeadingWhiteSpace, ignoreTrailingWhiteSpace, nullValue, nanValue, positiveInf, negativeInf, dateFormat, timestampFormat, maxColumns, maxCharsPerColumn, maxMalformedLogPerPartition, mode, columnNameOfCorruptRecord, multiLine, charToEscapeQuoteEscaping, samplingRatio, enforceSchema, emptyValue, locale, lineSep, pathGlobFilter, recursiveFileLookup)\u001b[0m\n\u001b[0;32m    533\u001b[0m             \u001b[0mpath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    534\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 535\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_df\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_jreader\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcsv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_spark\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_sc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_jvm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPythonUtils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtoSeq\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    536\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mRDD\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    537\u001b[0m             \u001b[1;32mdef\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mS:\\mesgit\\CSC645\\BDA\\sparkhome\\spark-3.0.1-bin-hadoop2.7\\python\\lib\\py4j-0.10.9-src.zip\\py4j\\java_gateway.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, *args)\u001b[0m\n\u001b[0;32m   1302\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1303\u001b[0m         \u001b[0manswer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgateway_client\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msend_command\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1304\u001b[1;33m         return_value = get_return_value(\n\u001b[0m\u001b[0;32m   1305\u001b[0m             answer, self.gateway_client, self.target_id, self.name)\n\u001b[0;32m   1306\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mS:\\mesgit\\CSC645\\BDA\\sparkhome\\spark-3.0.1-bin-hadoop2.7\\python\\pyspark\\sql\\utils.py\u001b[0m in \u001b[0;36mdeco\u001b[1;34m(*a, **kw)\u001b[0m\n\u001b[0;32m    132\u001b[0m                 \u001b[1;31m# Hide where the exception came from that shows a non-Pythonic\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    133\u001b[0m                 \u001b[1;31m# JVM exception message.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 134\u001b[1;33m                 \u001b[0mraise_from\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconverted\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    135\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    136\u001b[0m                 \u001b[1;32mraise\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mS:\\mesgit\\CSC645\\BDA\\sparkhome\\spark-3.0.1-bin-hadoop2.7\\python\\pyspark\\sql\\utils.py\u001b[0m in \u001b[0;36mraise_from\u001b[1;34m(e)\u001b[0m\n",
-      "\u001b[1;31mAnalysisException\u001b[0m: Path does not exist: file:/S:/mesgit/CSC645/BDA/data-sets/data-sets/MovieLens-Small/ml-latest-small/ratings.csv;"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = spark.read.csv(RATINGS_CSV_LOCATION)"
    ]
@@ -102,9 +86,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-------+------+---------+\n",
+      "|   _c0|    _c1|   _c2|      _c3|\n",
+      "+------+-------+------+---------+\n",
+      "|userId|movieId|rating|timestamp|\n",
+      "|     1|      1|   4.0|964982703|\n",
+      "|     1|      3|   4.0|964981247|\n",
+      "|     1|      6|   4.0|964982224|\n",
+      "|     1|     47|   5.0|964983815|\n",
+      "|     1|     50|   5.0|964982931|\n",
+      "|     1|     70|   3.0|964982400|\n",
+      "|     1|    101|   5.0|964980868|\n",
+      "|     1|    110|   4.0|964982176|\n",
+      "|     1|    151|   5.0|964984041|\n",
+      "|     1|    157|   5.0|964984100|\n",
+      "|     1|    163|   5.0|964983650|\n",
+      "|     1|    216|   5.0|964981208|\n",
+      "|     1|    223|   3.0|964980985|\n",
+      "|     1|    231|   5.0|964981179|\n",
+      "|     1|    235|   4.0|964980908|\n",
+      "|     1|    260|   5.0|964981680|\n",
+      "|     1|    296|   3.0|964982967|\n",
+      "|     1|    316|   3.0|964982310|\n",
+      "|     1|    333|   5.0|964981179|\n",
+      "+------+-------+------+---------+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "root\n",
+      " |-- _c0: string (nullable = true)\n",
+      " |-- _c1: string (nullable = true)\n",
+      " |-- _c2: string (nullable = true)\n",
+      " |-- _c3: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "df.show()\n",
     "df.printSchema()"
@@ -144,9 +167,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-------+------+---------+\n",
+      "|userId|movieId|rating|timestamp|\n",
+      "+------+-------+------+---------+\n",
+      "|     1|      1|   4.0|964982703|\n",
+      "|     1|      3|   4.0|964981247|\n",
+      "|     1|      6|   4.0|964982224|\n",
+      "|     1|     47|   5.0|964983815|\n",
+      "|     1|     50|   5.0|964982931|\n",
+      "|     1|     70|   3.0|964982400|\n",
+      "|     1|    101|   5.0|964980868|\n",
+      "|     1|    110|   4.0|964982176|\n",
+      "|     1|    151|   5.0|964984041|\n",
+      "|     1|    157|   5.0|964984100|\n",
+      "|     1|    163|   5.0|964983650|\n",
+      "|     1|    216|   5.0|964981208|\n",
+      "|     1|    223|   3.0|964980985|\n",
+      "|     1|    231|   5.0|964981179|\n",
+      "|     1|    235|   4.0|964980908|\n",
+      "|     1|    260|   5.0|964981680|\n",
+      "|     1|    296|   3.0|964982967|\n",
+      "|     1|    316|   3.0|964982310|\n",
+      "|     1|    333|   5.0|964981179|\n",
+      "|     1|    349|   4.0|964982563|\n",
+      "+------+-------+------+---------+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "root\n",
+      " |-- userId: integer (nullable = true)\n",
+      " |-- movieId: integer (nullable = true)\n",
+      " |-- rating: double (nullable = true)\n",
+      " |-- timestamp: integer (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Loading CSV file with proper parsing and inferSchema\n",
     "df = spark.read.csv(\n",
@@ -209,9 +271,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-------+------+---------+\n",
+      "|userId|movieId|rating|timestamp|\n",
+      "+------+-------+------+---------+\n",
+      "|     1|      1|   4.0|964982703|\n",
+      "|     1|      3|   4.0|964981247|\n",
+      "|     1|      6|   4.0|964982224|\n",
+      "|     1|     47|   5.0|964983815|\n",
+      "|     1|     50|   5.0|964982931|\n",
+      "|     1|     70|   3.0|964982400|\n",
+      "|     1|    101|   5.0|964980868|\n",
+      "|     1|    110|   4.0|964982176|\n",
+      "|     1|    151|   5.0|964984041|\n",
+      "|     1|    157|   5.0|964984100|\n",
+      "|     1|    163|   5.0|964983650|\n",
+      "|     1|    216|   5.0|964981208|\n",
+      "|     1|    223|   3.0|964980985|\n",
+      "|     1|    231|   5.0|964981179|\n",
+      "|     1|    235|   4.0|964980908|\n",
+      "|     1|    260|   5.0|964981680|\n",
+      "|     1|    296|   3.0|964982967|\n",
+      "|     1|    316|   3.0|964982310|\n",
+      "|     1|    333|   5.0|964981179|\n",
+      "|     1|    349|   4.0|964982563|\n",
+      "+------+-------+------+---------+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "root\n",
+      " |-- userId: integer (nullable = true)\n",
+      " |-- movieId: integer (nullable = true)\n",
+      " |-- rating: double (nullable = true)\n",
+      " |-- timestamp: integer (nullable = true)\n",
+      "\n",
+      "+-------+------------------+----------------+------------------+--------------------+\n",
+      "|summary|            userId|         movieId|            rating|           timestamp|\n",
+      "+-------+------------------+----------------+------------------+--------------------+\n",
+      "|  count|            100836|          100836|            100836|              100836|\n",
+      "|   mean|326.12756356856676|19435.2957177992| 3.501556983616962|1.2059460873684695E9|\n",
+      "| stddev| 182.6184914635004|35530.9871987003|1.0425292390606342|2.1626103599513078E8|\n",
+      "|    min|                 1|               1|               0.5|           828124615|\n",
+      "|    max|               610|          193609|               5.0|          1537799250|\n",
+      "+-------+------------------+----------------+------------------+--------------------+\n",
+      "\n",
+      "== Physical Plan ==\n",
+      "FileScan csv [userId#90,movieId#91,rating#92,timestamp#93] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex[file:/S:/mesgit/CSC645/BDA/data-sets/MovieLens-Small/ml-latest-small/ratings.csv], PartitionFilters: [], PushedFilters: [], ReadSchema: struct<userId:int,movieId:int,rating:double,timestamp:int>\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#  Type safe loading of ratings.csv file\n",
     "df = spark.read.csv(\n",
@@ -248,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
