--- a/BDA/Section 4 - Machine Learning with Spark MLlib/4.3/hands-on-4.3.ipynb
+++ b/BDA/Section 4 - Machine Learning with Spark MLlib/4.3/hands-on-4.3.ipynb
@@ -15,13 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "ratings = (\n",
     "    spark.read.csv(\n",
-    "        path=\"ratings.csv\",\n",
+    "        path=\"../../data-sets/MovieLens-Small/ml-latest-small/ratings.csv\",\n",
     "        sep=\",\",\n",
     "        header=True,\n",
     "        quote='\"',\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,16 +97,16 @@
       "+------+-------+------+----------+\n",
       "|userId|movieId|rating|prediction|\n",
       "+------+-------+------+----------+\n",
-      "|191   |148    |5.0   |4.9315734 |\n",
-      "|133   |471    |4.0   |3.3586264 |\n",
-      "|597   |471    |2.0   |3.8164203 |\n",
-      "|385   |471    |4.0   |3.3726332 |\n",
-      "|436   |471    |3.0   |3.655964  |\n",
-      "|602   |471    |4.0   |3.5622292 |\n",
-      "|91    |471    |1.0   |2.1123495 |\n",
-      "|409   |471    |3.0   |3.8733768 |\n",
-      "|372   |471    |3.0   |3.239497  |\n",
-      "|599   |471    |2.5   |2.5592706 |\n",
+      "|191   |148    |5.0   |4.9256597 |\n",
+      "|133   |471    |4.0   |3.2044077 |\n",
+      "|597   |471    |2.0   |3.7744582 |\n",
+      "|385   |471    |4.0   |3.1436024 |\n",
+      "|436   |471    |3.0   |3.3761165 |\n",
+      "|602   |471    |4.0   |3.7356088 |\n",
+      "|91    |471    |1.0   |2.5796928 |\n",
+      "|409   |471    |3.0   |3.8035347 |\n",
+      "|372   |471    |3.0   |3.1774716 |\n",
+      "|599   |471    |2.5   |2.9243267 |\n",
       "+------+-------+------+----------+\n",
       "only showing top 10 rows\n",
       "\n"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,11 +130,11 @@
       "+---+--------------------+\n",
       "| id|            features|\n",
       "+---+--------------------+\n",
-      "| 10|[-0.011906751, 1....|\n",
-      "| 20|[-0.59221053, 0.6...|\n",
-      "| 30|[-0.63435304, 0.6...|\n",
-      "| 40|[-0.686187, 0.679...|\n",
-      "| 50|[-0.57855225, 0.3...|\n",
+      "| 10|[-0.57681924, -0....|\n",
+      "| 20|[0.19191976, -0.5...|\n",
+      "| 30|[-0.13157046, 0.0...|\n",
+      "| 40|[-0.19657418, -0....|\n",
+      "| 50|[0.067084774, -0....|\n",
       "+---+--------------------+\n",
       "only showing top 5 rows\n",
       "\n"
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -157,11 +157,11 @@
       "+---+--------------------+\n",
       "| id|            features|\n",
       "+---+--------------------+\n",
-      "| 10|[-0.6802544, 0.43...|\n",
-      "| 20|[-1.0189537, 0.31...|\n",
-      "| 30|[-0.90857005, 0.4...|\n",
-      "| 40|[-0.9740444, 0.50...|\n",
-      "| 50|[-0.89618796, 0.8...|\n",
+      "| 10|[-0.58131766, 0.0...|\n",
+      "| 20|[0.17235413, 0.14...|\n",
+      "| 30|[0.62102294, 0.16...|\n",
+      "| 40|[-0.45563155, -0....|\n",
+      "| 50|[-3.3535386E-4, -...|\n",
       "+---+--------------------+\n",
       "only showing top 5 rows\n",
       "\n"
@@ -203,9 +203,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
