--- a/BDA/Section 0 - Python and Spark a match made in heaven/00_pathlib_os.ipynb
+++ b/BDA/Section 0 - Python and Spark a match made in heaven/00_pathlib_os.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,9 @@
       "S:\\\n",
       "S:\\mesgit\\CSC645\\BDA\\Section 0 - MapReduce starting with Spark\n",
       "S:\\mesgit\\CSC645\\BDA\\Section 0 - MapReduce starting with Spark\n",
-      "S:\\mesgit\\CSC645\\BDA\\Section 0 - MapReduce starting with Spark\n"
+      "S:\\mesgit\\CSC645\\BDA\n",
+      "S:\\mesgit\\CSC645\\BDA\\Section 0 - MapReduce starting with Spark\n",
+      "S:\\mesgit\\CSC645\\BDA\\sparkhome\\spark-3.0.1-bin-hadoop2.7\\data\n"
      ]
     }
    ],
@@ -29,24 +31,9 @@
     "print(Path('/').resolve())\n",
     "print(Path('.').resolve())\n",
     "print(Path().resolve())\n",
-    "print(os.getcwd())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "type of Path is <class 'pathlib.WindowsPath'> but type of getcwd is <class 'str'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"type of Path is {type(Path().resolve())} but type of getcwd is {type(os.getcwd())}\")"
+    "print(Path('..').resolve())\n",
+    "print(os.getcwd())\n",
+    "print(os.environ['DATA_EXAMPLES'])"
    ]
   },
   {
@@ -54,7 +41,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(f\"type of Path is {type(Path().resolve())} but type of getcwd is {type(os.getcwd())}\")"
+   ]
   }
  ],
  "metadata": {
